# pack

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix
src/: cli.rs  error.rs  gear.rs  main.rs  util.rs
src/actions/: cmd.rs  edc.rs  gear.rs  keeps.rs  mod.rs  owns.rs  pocket.rs  reach.rs  stash.rs  wants.rs
src/contracts/: mod.rs  pocketable.rs  reacher.rs  stasher.rs
src/models/: gear.rs  mod.rs  pocket.rs
src/storage/: ditcher.rs  fisher.rs  mod.rs  pack.rs  stasher.rs
