[package]
name = "pack"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/risolij/pack"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
syntect = "5.3.0"
thiserror = "2.0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
